--- a/notebooks-HPCGAP/HPCGAP.ipynb
+++ b/notebooks-HPCGAP/HPCGAP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,29 +16,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple speedups for unsophisticated users on multicore workstations\n",
+    "# Simple speedups on multicore workstations with minimal programming\n",
     "\n",
     "## Multiplying matrices\n",
     "\n",
-    "We create a couple of random rational matrices and check GAP's default serial multiply."
+    "We create a couple of random integr matrices and check GAP's default serial multiply."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 6.60s cpu time: 5.99s memory allocated: 1007.49MB result returned\n"
+      "wall time: 14.9s cpu time: 14.8s memory allocated: 30.62MB result returned\n"
      ]
     }
    ],
    "source": [
-    "m1 := MakeImmutable(RandomMat(400, 400, Rationals));;\n",
-    "m2 := MakeImmutable(RandomMat(400, 400, Rationals));;\n",
+    "m1 := MakeImmutable(RandomMat(2000, 2000, Integers));;\n",
+    "m2 := MakeImmutable(RandomMat(2000, 2000, Integers));;\n",
     "ShowBench(\\*, m1, m2);"
    ]
   },
@@ -46,12 +46,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In a few lines of code, we can implement a simple blocked matrix multiply based on $$(A*B)_{ik} = \\sum_j A_{ij}*B_{jk}$$  "
+    "If we didn't have a parallel matrix multiply already, then in a few lines of code, we could implement a simple blocked matrix multiply based on $$(A*B)_{ik} = \\sum_j A_{ij}*B_{jk}$$  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "function( m1, m2, chop1, chop2, chop3 ) ... end"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 262,
      "metadata": {
       "text/plain": ""
      },
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 2.92s cpu time: 9.31s memory allocated: 605.58MB result returned\n"
+      "wall time: 2.67s cpu time: 28.5s memory allocated: 278.73MB result returned\n"
      ]
     }
    ],
@@ -109,7 +109,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Accumulate` function takes a list of tasks and combines their results as they become available, allowing memory to be recovered quickly."
+    "The `Accumulate` function used in this illustrates another mechanism.\n",
+    "\n",
+    "It takes a list of tasks and combines their results in whatever order they become available, allowing memory to be recovered quickly.\n",
+    "\n",
+    "These two are the only functions that are HPCGAP specific. "
    ]
   },
   {
@@ -153,9 +157,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ PSL(2, 17), M_11 ]"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[ 11, 7 ]"
+      ]
+     },
+     "execution_count": 333,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c := cands([136,165],[1..13]);; List(c, x -> x.g); List(c, x-> x.rank);"
+    "c := MakeImmutable(cands([136,165],[1..13]));; List(c, x -> x.g); List(c, x-> x.rank);"
    ]
   },
   {
@@ -167,18 +196,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 256,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115975"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "NrPartitionsSet([2..11]);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 258,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wall time: 58.5s cpu time: 33.1s memory allocated: 16.38GB result returned\n"
+     ]
+    }
+   ],
    "source": [
     "BruteForceSearch := function ( s )\n",
     "    return Filtered( PartitionsSet([2..s.rank]), \n",
@@ -201,7 +251,7 @@
    "outputs": [],
    "source": [
     "ParBruteForceSearch := function ( s )\n",
-    "    return ParFiltered( PartitionsSet( [ 2 .. s.rank ] ), \n",
+    "    return ParFiltered( MakeImmutable(PartitionsSet( [ 2 .. s.rank ] )), \n",
     "    p -> TestPartition( s, p ), 10);        \n",
     "end;\n",
     "ShowBench(ParBruteForceSearch, c[1]);"
@@ -211,24 +261,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Atomic and Locked Data\n",
+    "# Atomic and Locked Data\n",
     "\n",
     "Shared data is unavoidable in many symbolic computation. HPCGAP offers a number of \n",
     "forms of support.  First lets see what happens if we use the default lists (this would normally be forbidden, but we've suppressed some checking).\n",
     "\n",
-    "A simple calculation that takes a somewhat variable time:"
+    "A simple but irregular calculation: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 1.87us cpu time: 0ns memory allocated: 96B result returned\n"
+      "wall time: 13.7us cpu time: 0ns memory allocated: 96B result returned\n"
      ]
     }
    ],
@@ -247,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9966"
+       "9978"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 291,
      "metadata": {
       "text/plain": ""
      },
@@ -279,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +338,7 @@
        "10000"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 303,
      "metadata": {
       "text/plain": ""
      },
@@ -297,7 +347,6 @@
    ],
    "source": [
     "l := AtomicList();;\n",
-    "process := function(i) Add(l, MakeImmutable([i, PowerModInt(x+i,x+i,p)])); end;;\n",
     "tasks := List([1..10000], i -> RunTask(process,i));; WaitTasks(tasks);;\n",
     "Length(l);"
    ]
@@ -365,8 +414,10 @@
    ],
    "source": [
     "l := AtomicList();;\n",
-    "process := function(i)  Add(l,i); Add(l,i); end;;\n",
-    "    tasks := List([1..100000], i -> RunTask(process,i));; WaitTasks(tasks);;\n",
+    "process := function(i)  Add(l,i); Add(l,i); \n",
+    "end;;\n",
+    "   \n",
+    "tasks := List([1..100000], i -> RunTask(process,i));; WaitTasks(tasks);;\n",
     "Length(l); \n",
     "x := First([1..100000], i-> l[2*i-1] <>l[2*i]); l[2*x-1];l[2*x];"
    ]
@@ -380,32 +431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "200000"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 248,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "200000\n",
+      "true\n"
+     ]
     }
    ],
    "source": [
@@ -414,9 +449,10 @@
     "    Add(l,i); Add(l,i); \n",
     "od; end;;\n",
     "tasks := List([1..100000], i -> RunTask(process,i));; WaitTasks(tasks);;\n",
-    "atomic l do MakeImmutable(l); od; # we need to get a a lock on l to make it readonly.\n",
-    "Length(l);\n",
-    "ForAll([1..100000], i-> l[2*i-1] = l[2*i]);"
+    "atomic readonly l do  # we need to get a a lock on l to make it readonly.\n",
+    "    Print(Length(l),\"\\n\");\n",
+    "    Print(ForAll([1..100000], i-> l[2*i-1] = l[2*i]),\"\\n\");\n",
+    "od;"
    ]
   },
   {
