--- a/notebooks-master/Syntax Tree Demo.ipynb
+++ b/notebooks-master/Syntax Tree Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"138ns\""
+       "\"145ns\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {
       "text/plain": ""
      },
@@ -45,10 +45,10 @@
     {
      "data": {
       "text/plain": [
-       "\"22ns\""
+       "\"21ns\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {
       "text/plain": ""
      },
@@ -56,8 +56,12 @@
     }
    ],
    "source": [
-    "foo := function(n) local i,x; for i in [1..n] do x := Int(i/3); od; end;;\n",
-    "bar :=  function(n) local i,x; for i in [1..n] do x := QuoInt(i,3); od; end;;\n",
+    "foo := function(n) local i,x; for i in [1..n] do \n",
+    "    x := Int(i/3); \n",
+    "    od; end;;\n",
+    "bar :=  function(n) local i,x; for i in [1..n] do \n",
+    "    x := QuoInt(i,3); \n",
+    "    od; end;;\n",
     "ns2string(timer(foo)); ns2string(timer(bar));"
    ]
   },
@@ -72,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +85,7 @@
        "function( x ) ... end"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {
       "text/plain": ""
      },
@@ -92,7 +96,7 @@
     "f := function(x) \n",
     "    #% optimise here \n",
     "    return Int((x+1)/3) + Int((x^2)/11);\n",
-    "end;"
+    "end;;"
    ]
   },
   {
@@ -144,12 +148,13 @@
     "Now to produce an improved version of `f`, we define a *pattern* \n",
     "including placeholders `\"$1\"` and `\"$2\"` and a *replacement*. \n",
     "\n",
-    "Both are essentially just fragments of syntax tree."
+    "Both are essentially just fragments of syntax tree.\n",
+    "Nicer pattern editing tools and in development."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +163,7 @@
        "rec( args := [ rec( left := \"$1\", right := rec( type := \"EXPR_INT\", value := \"$2\" ), type := \"EXPR_QUO\" ) ], funcref := rec( gvar := \"Int\", type := \"EXPR_REF_GVAR\" ), type := \"EXPR_FUNCCALL_1ARGS\" )"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,7 +173,7 @@
        "rec( args := [ \"$1\", rec( type := \"EXPR_INT\", value := \"$2\" ) ], funcref := rec( gvar := \"QuoInt\", type := \"EXPR_REF_GVAR\" ), type := \"EXPR_FUNCCALL_2ARGS\" )"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -199,9 +204,9 @@
      "output_type": "stream",
      "text": [
       "function ( x )\n",
-      "                #% optimise here \n",
-      "                return QuoInt( x + 1, 3 ) + QuoInt( x ^ 2, 11 );\n",
-      "            end"
+      "    #% optimise here \n",
+      "    return QuoInt( x + 1, 3 ) + QuoInt( x ^ 2, 11 );\n",
+      "end"
      ]
     }
    ],
@@ -212,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"343ns\""
+       "\"344ns\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {
       "text/plain": ""
      },
@@ -230,10 +235,10 @@
     {
      "data": {
       "text/plain": [
-       "\"97ns\""
+       "\"94ns\""
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {
       "text/plain": ""
      },
@@ -244,6 +249,13 @@
     "ns2string(timer( function(n) local i; for  i in [1..n] do f(i); od; end));\n",
     "ns2string(timer( function(n) local i; for  i in [1..n] do g(i); od; end));\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
