Debugging and tidying

--- a/notebooks-HPCGAP/HPCGAP.ipynb
+++ b/notebooks-HPCGAP/HPCGAP.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "CODE_DIR := \"../gap/\";;\n",
     "Read(Concatenation(CODE_DIR, \"pmatmul.g\"));\n",
     "Read(Concatenation(CODE_DIR, \"makepar.g\"));\n",
@@ -25,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 14.9s cpu time: 14.8s memory allocated: 30.62MB result returned\n"
+      "wall time: 14.6s cpu time: 14.6s memory allocated: 30.62MB result returned\n"
      ]
     }
    ],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +61,7 @@
        "function( m1, m2, chop1, chop2, chop3 ) ... end"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 8,
      "metadata": {
       "text/plain": ""
      },
@@ -90,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 2.67s cpu time: 28.5s memory allocated: 278.73MB result returned\n"
+      "wall time: 2.55s cpu time: 27.1s memory allocated: 280.67MB result returned\n"
      ]
     }
    ],
@@ -109,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Accumulate` function used in this illustrates another mechanism.\n",
+    "The `Accumulate` function used in this illustrates another mechanism: `WaitAnyTask`\n",
     "\n",
     "It takes a list of tasks and combines their results in whatever order they become available, allowing memory to be recovered quickly.\n",
     "\n",
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +165,7 @@
        "[ PSL(2, 17), M_11 ]"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 6,
      "metadata": {
       "text/plain": ""
      },
@@ -176,7 +177,7 @@
        "[ 11, 7 ]"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 7,
      "metadata": {
       "text/plain": ""
      },
@@ -184,7 +185,7 @@
     }
    ],
    "source": [
-    "c := MakeImmutable(cands([136,165],[1..13]));; List(c, x -> x.g); List(c, x-> x.rank);"
+    "c := cands([136,165],[1..13]);; List(c, x -> x.g); List(c, x-> x.rank);"
    ]
   },
   {
@@ -196,36 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "115975"
-      ]
-     },
-     "execution_count": 256,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "NrPartitionsSet([2..11]);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 58.5s cpu time: 33.1s memory allocated: 16.38GB result returned\n"
+      "wall time: 34.7s cpu time: 29.0s memory allocated: 16.38GB result returned\n"
      ]
     }
    ],
@@ -246,12 +234,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wall time: 21.7s cpu time: 40.8s memory allocated: 15.56GB result returned\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "function( s ) ... end"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ParBruteForceSearch := function ( s )\n",
-    "    return ParFiltered( MakeImmutable(PartitionsSet( [ 2 .. s.rank ] )), \n",
+    "    return ParFiltered( PartitionsSet( [ 2 .. s.rank ] ), \n",
     "    p -> TestPartition( s, p ), 10);        \n",
     "end;\n",
     "ShowBench(ParBruteForceSearch, c[1]);"
@@ -271,20 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 13.7us cpu time: 0ns memory allocated: 96B result returned\n"
+      "wall time: 3.00us cpu time: 0ns memory allocated: 96B result returned\n"
      ]
     }
    ],
    "source": [
-    "p := NextProbablyPrimeInt(2^100);;\n",
-    "x := NextProbablyPrimeInt(2^50);;\n",
+    "p := NextPrimeInt(2^100);;\n",
+    "x := NextPrimeInt(2^50);;\n",
     "ShowBench(PowerModInt, x, x, p );"
    ]
   },
@@ -297,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9978"
+       "9967"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 17,
      "metadata": {
       "text/plain": ""
      },
@@ -329,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +346,7 @@
        "10000"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 21,
      "metadata": {
       "text/plain": ""
      },
@@ -360,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +377,7 @@
        "200000"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 26,
      "metadata": {
       "text/plain": ""
      },
@@ -378,10 +386,10 @@
     {
      "data": {
       "text/plain": [
-       "237"
+       "10"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 27,
      "metadata": {
       "text/plain": ""
      },
@@ -390,10 +398,10 @@
     {
      "data": {
       "text/plain": [
-       "237"
+       "10"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 28,
      "metadata": {
       "text/plain": ""
      },
@@ -402,10 +410,10 @@
     {
      "data": {
       "text/plain": [
-       "238"
+       "11"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 29,
      "metadata": {
       "text/plain": ""
      },
@@ -431,11 +439,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "200000\n",
@@ -454,13 +462,6 @@
     "    Print(ForAll([1..100000], i-> l[2*i-1] = l[2*i]),\"\\n\");\n",
     "od;"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
