--- a/notebooks-master/Syntax Tree Demo.ipynb
+++ b/notebooks-master/Syntax Tree Demo.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "\"145ns\""
+       "\"137ns\""
       ]
      },
      "execution_count": 5,
@@ -45,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "\"21ns\""
+       "\"23ns\""
       ]
      },
      "execution_count": 6,
@@ -71,73 +71,50 @@
    "source": [
     "We show how `SyntaxTree` could be used to automatically fix this in the workspace. \n",
     "\n",
-    "Here is a test function. The comment is a *pragma* -- a comment which is retained in the function object, which could be used to direct optimisation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "function( x ) ... end"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f := function(x) \n",
-    "    #% optimise here \n",
-    "    return Int((x+1)/3) + Int((x^2)/11);\n",
-    "end;;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us first have a look at the syntax tree of `f`.\n",
+    "`f` below is a  test function. The comment is a *pragma* -- a comment which is retained in the function object, which could be used to direct optimisation.\n",
     "\n",
-    "Note the pragma statement."
+    "Note that the pragma appears in the syntax tree, unlike the regular comment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EXPR_FUNC(\n",
-      "name := f, nams := [ \"x\" ], variadic := false, narg := 1, nloc := 0, stats := \\\n",
-      "STAT_SEQ_STAT2(\n",
-      "  statements := [STAT_PRAGMA(value := % optimise here ), STAT_RETURN_OBJ(\n",
-      "      obj := EXPR_SUM(\n",
-      "        right := EXPR_FUNCCALL_1ARGS(\n",
-      "          args := [\n",
-      "            EXPR_QUO(right := EXPR_INT(value := 11), left := EXPR_POW(\n",
-      "                right := EXPR_INT(value := 2), left := EXPR_REF_LVAR(\n",
-      "                  lvar := 1)))], funcref := EXPR_REF_GVAR(gvar := Int)\n",
-      "               ), left := EXPR_FUNCCALL_1ARGS(\n",
-      "              args := [\n",
-      "                EXPR_QUO(right := EXPR_INT(value := 3), left := EXPR_SUM(\n",
-      "                    right := EXPR_INT(value := 1), left := EXPR_REF_LVAR(\n",
-      "                      lvar := 1)))], funcref := EXPR_REF_GVAR(gvar := Int))))\n",
-      "              ]))\n",
-      "            "
+      "EXPR_FUNC(name := f, nams := [ \"x\" ], variadic := false, narg := 1, nloc := 0,\\\n",
+      " stats := STAT_SEQ_STAT2(\n",
+      "              statements := [\n",
+      "                STAT_PRAGMA(value := % optimise here ), STAT_RETURN_OBJ(\n",
+      "                  obj := EXPR_SUM(\n",
+      "                    right := EXPR_FUNCCALL_1ARGS(\n",
+      "                      args := [\n",
+      "                        EXPR_QUO(\n",
+      "                          right := EXPR_INT(value := 11), left := EXPR_POW(\n",
+      "                            right := EXPR_INT(\n",
+      "                              value := 2), left := EXPR_REF_LVAR(lvar := 1)))\n",
+      "                          ], funcref := EXPR_REF_GVAR(gvar := Int)\n",
+      "                           ), left := EXPR_FUNCCALL_1ARGS(\n",
+      "                          args := [\n",
+      "                            EXPR_QUO(\n",
+      "                              right := EXPR_INT(value := 3), left := EXPR_SUM(\n",
+      "                                right := EXPR_INT(\n",
+      "                                  value := 1), left := EXPR_REF_LVAR(\n",
+      "                                  lvar := 1)))\n",
+      "                              ], funcref := EXPR_REF_GVAR(gvar := Int))))]))\n",
+      "                        "
      ]
     }
    ],
    "source": [
+    "f := function(x) \n",
+    "    # normal comment\n",
+    "    #% optimise here \n",
+    "    return Int((x+1)/3) + Int((x^2)/11);\n",
+    "end;;\n",
     "Display(SyntaxTree(f));"
    ]
   },
@@ -154,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +140,7 @@
        "rec( args := [ rec( left := \"$1\", right := rec( type := \"EXPR_INT\", value := \"$2\" ), type := \"EXPR_QUO\" ) ], funcref := rec( gvar := \"Int\", type := \"EXPR_REF_GVAR\" ), type := \"EXPR_FUNCCALL_1ARGS\" )"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -173,7 +150,7 @@
        "rec( args := [ \"$1\", rec( type := \"EXPR_INT\", value := \"$2\" ) ], funcref := rec( gvar := \"QuoInt\", type := \"EXPR_REF_GVAR\" ), type := \"EXPR_FUNCCALL_2ARGS\" )"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -204,29 +181,37 @@
      "output_type": "stream",
      "text": [
       "function ( x )\n",
-      "    #% optimise here \n",
-      "    return QuoInt( x + 1, 3 ) + QuoInt( x ^ 2, 11 );\n",
-      "end"
+      "                            #% optimise here \n",
+      "                            return QuoInt( x + 1, 3 ) + QuoInt( x ^ 2, 11 );\n",
+      "                        end\n",
+      "                        "
      ]
     }
    ],
    "source": [
     "g := RewriteFunc(f, pattern, replace);;\n",
-    "Print(g);"
+    "Display(g);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We compare the performance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"344ns\""
+       "\"340ns\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {
       "text/plain": ""
      },
@@ -235,10 +220,10 @@
     {
      "data": {
       "text/plain": [
-       "\"94ns\""
+       "\"95ns\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {
       "text/plain": ""
      },
@@ -249,13 +234,6 @@
     "ns2string(timer( function(n) local i; for  i in [1..n] do f(i); od; end));\n",
     "ns2string(timer( function(n) local i; for  i in [1..n] do g(i); od; end));\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
