--- a/notebooks-master/Meataxe64 Demo.ipynb
+++ b/notebooks-master/Meataxe64 Demo.ipynb
@@ -9,48 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "LoadPackage(\"meataxe64\"); Read(\"../gap/bench.g\"); LoadPackage(\"jupyterviz\");"
+    "LoadPackage(\"meataxe64\");; Read(\"../gap/bench.g\"); LoadPackage(\"jupyterviz\");;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $100\\, 000 \\times 100\\, 000$ matrices over $\\mathbb{F}_2$"
+    "## $100\\, 000 \\times 100\\, 000$ matrices over $\\mathbb{F}_2$\n",
+    "\n",
+    "The main target of the package is large computations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +36,7 @@
        "< matrix 100000x100000 : <MTX64 GF(2)>>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {
       "text/plain": ""
      },
@@ -72,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 51.43s cpu time: 526.48s memory allocated: 72B no result returned\n"
+      "wall time: 63.3s cpu time: 595s memory allocated: 72B no result returned\n"
      ]
     },
     {
@@ -88,7 +65,7 @@
        "< matrix 100000x100000 : <MTX64 GF(2)>>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {
       "text/plain": ""
      },
@@ -107,7 +84,7 @@
    "source": [
     "## Gaussian Elimination\n",
     "\n",
-    "To see the full capability we need a singular matrix. \n",
+    "Our other key primitive operation. To see what it does properly we need a singular matrix. \n",
     "\n",
     "We take the Kronecker (tensor) product of two rectangular matrices. \n",
     "\n",
@@ -116,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +102,7 @@
        "<MTX64 GF(3^2)>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {
       "text/plain": ""
      },
@@ -137,7 +114,7 @@
        "< matrix 19800x19800 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {
       "text/plain": ""
      },
@@ -166,24 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 12.27s cpu time: 11.39s memory allocated: 747.81MB no result return\\\n",
-      "ed\n"
+      "wall time: 11.8s cpu time: 11.1s memory allocated: 747.81MB no result returned\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "< matrix 9999x9801 : <MTX64 GF(3^2)>>"
+       "fail"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {
       "text/plain": ""
      },
@@ -195,7 +171,19 @@
        "< matrix 9801x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 23,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "< matrix 9999x9801 : <MTX64 GF(3^2)>>"
+      ]
+     },
+     "execution_count": 24,
      "metadata": {
       "text/plain": ""
      },
@@ -207,7 +195,7 @@
        "< matrix 9801x9999 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 25,
      "metadata": {
       "text/plain": ""
      },
@@ -215,7 +203,8 @@
     }
    ],
    "source": [
-    "ShowBench(function() ech := MTX64_Echelize(m);end);\n",
+    "ech := fail;; # suppress a warning.\n",
+    "ShowBench(function() ech := MTX64_Echelize(m);end); \n",
     "ech. multiplier; ech.cleaner; ech.remnant;  # M, K and R in the above formula"
    ]
   },
@@ -284,85 +273,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run-time versus matrix size -- GF(2)"
+    "## Run-time versus matrix size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We set the field and maximum dimension and make a set of random matrices of different sizes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mats := List([1,11..151], i-> MTX64_RandomMat(MTX64_FiniteField(2), i*200, i*200));;"
+    "q := 3;; maxdim := 20000;; \n",
+    "sizes := List([1..16], i-> i*QuoInt(maxdim, 16));;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "function( m ) ... end"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fsq := function(m) MTX64_WriteMatrix(m, \"a\"); MTX64_fMultiply(\".\", \"a\", \"a\", \"b\"); end;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
+    "mats := List(sizes, i-> MTX64_RandomMat(MTX64_FiniteField(q), i, i));;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And look at the timing for squaring them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fsq := function(m) MTX64_WriteMatrix(m, \"a\"); MTX64_fMultiply(\".\", \"a\", \"a\", \"b\"); end;;\n",
     "marks1 := List(mats, x-> BenchMark(\\*,x,x));;\n",
-    "marksm := List(mats, x-> BenchMark(fsq,x));;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "( function ( element ) {\n",
-       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"x\" : [200,2200,4200,6200,8200,10200,12200,14200,16200,18200,20200,22200,24200,26200,28200,30200],\"y\" : [0,7,37,81,162,267,459,736,1267,1474,2003,2822,3462,4743,5451,7020],\"type\" : \"line\"},{\"x\" : [200,2200,4200,6200,8200,10200,12200,14200,16200,18200,20200,22200,24200,26200,28200,30200],\"y\" : [3,11,42,101,280,438,780,1182,2666,3761,5108,6845,9295,11603,14659,18273],\"type\" : \"line\"},{\"x\" : [200,2200,4200,6200,8200,10200,12200,14200,16200,18200,20200,22200,24200,26200,28200,30200],\"y\" : [4,16,57,130,126,193,289,370,403,538,698,915,1130,1482,1755,2109],\"type\" : \"line\"}],\"layout\" : {\"height\" : 400}},\"tool\" : \"plotly\"}\n",
-       ",function(element,visualization){\n",
-       "});\n",
-       "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"viz-tool-plotly\"\n",
-       ")){myCallback()}else{var filenameString=JSON.stringify(\"viz-tool-plotly\"\n",
-       ");var GAPcode=\"JUPVIZFileContents( LoadJavaScriptFile( \"+filenameString+\" ) );\";window.runGAP(GAPcode,function(result,error){if(error)throw Error(\"When loading library \"+filenameString+\": \"+error);result=result[\"text/plain\"];window.librariesLoadedFromGAP[\"viz-tool-plotly\"\n",
-       "]=result;try{var whatItEvaluatesTo=eval(result)}catch(e){throw Error(\"Error evaluating code for library \"+filenameString+\": \"+e)}return myCallback()})}\n",
-       "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"main\"\n",
-       ")){myCallback()}else{var filenameString=JSON.stringify(\"main\"\n",
-       ");var GAPcode=\"JUPVIZFileContents( LoadJavaScriptFile( \"+filenameString+\" ) );\";window.runGAP(GAPcode,function(result,error){if(error)throw Error(\"When loading library \"+filenameString+\": \"+error);result=result[\"text/plain\"];window.librariesLoadedFromGAP[\"main\"\n",
-       "]=result;try{var whatItEvaluatesTo=eval(result)}catch(e){throw Error(\"Error evaluating code for library \"+filenameString+\": \"+e)}return myCallback()})}\n",
-       ";\n",
-       "} )( element.get( 0 ) )"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {
-      "application/javascript": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Plot([200*[1,11..151],List(marks1, x-> x.cpu)],\n",
-    "[200*[1,11..151],List(marksm, x-> x.cpu)],\n",
-    "[200*[1,11..151],List(marksm, x-> QuoInt(x.wall,10^6))]);\n"
+    "marksm := List(mats, x-> BenchMark(fsq,x));;\n",
+    "Plot(\n",
+    "[sizes,List(marks1, x-> x.cpu), rec(name := \"single-threaded\")],\n",
+    "[sizes,List(marksm, x-> x.cpu), rec(name := \"multi-threaded CPU\", \n",
+    "title := \"Meataxe64 runtimes for matrix multiply\", xaxis := \"Dimension\", yaxis := \"ms\")],\n",
+    "[sizes,List(marksm, x-> QuoInt(x.wall,10^6)), rec(name := \"multi-threaded wall time\")]\n",
+    ");\n"
    ]
   },
   {
