--- a/notebooks-master/Meataxe64 Demo.ipynb
+++ b/notebooks-master/Meataxe64 Demo.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "<MTX64 GF(3^2)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 84,
      "metadata": {
       "text/plain": ""
      },
@@ -114,7 +114,7 @@
        "< matrix 19800x19800 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 87,
      "metadata": {
       "text/plain": ""
      },
@@ -143,27 +143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 11.8s cpu time: 11.1s memory allocated: 747.81MB no result returned\n"
+      "wall time: 11.5s cpu time: 11.2s memory allocated: 747.81MB no result returned\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "fail"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -171,7 +159,7 @@
        "< matrix 9801x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 90,
      "metadata": {
       "text/plain": ""
      },
@@ -183,7 +171,7 @@
        "< matrix 9999x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 91,
      "metadata": {
       "text/plain": ""
      },
@@ -195,7 +183,7 @@
        "< matrix 9801x9999 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 92,
      "metadata": {
       "text/plain": ""
      },
@@ -217,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 24.67s cpu time: 24.39s memory allocated: 186.95MB result returned\n"
+      "wall time: 24.6s cpu time: 24.4s memory allocated: 186.95MB result returned\n"
      ]
     }
    ],
@@ -236,19 +224,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also use the multi-threaded version of this, although this problem is rather small for it."
+    "We can also use the multi-threaded version of the Gaussian elimination"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 4.68s cpu time: 46.18s memory allocated: 144B result returned\n"
+      "wall time: 4.59s cpu time: 45.8s memory allocated: 144B result returned\n"
      ]
     },
     {
@@ -257,7 +245,7 @@
        "true"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 94,
      "metadata": {
       "text/plain": ""
      },
@@ -285,17 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "q := 3;; maxdim := 20000;; \n",
+    "q := 625;; maxdim := 5000;; \n",
     "sizes := List([1..16], i-> i*QuoInt(maxdim, 16));;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,9 +299,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "( function ( element ) {\n",
+       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"x\" : [312,624,936,1248,1560,1872,2184,2496,2808,3120,3432,3744,4056,4368,4680,4992],\"y\" : [6,29,68,137,244,383,645,889,1234,1705,2235,2884,3543,4673,5489,6611],\"name\" : \"single-threaded\",\"type\" : \"line\"},{\"x\" : [312,624,936,1248,1560,1872,2184,2496,2808,3120,3432,3744,4056,4368,4680,4992],\"y\" : [8,31,148,260,510,1305,1998,3272,4574,5812,7628,9573,11961,15620,18931,22342],\"name\" : \"multi-threaded CPU\",\"type\" : \"line\"},{\"x\" : [312,624,936,1248,1560,1872,2184,2496,2808,3120,3432,3744,4056,4368,4680,4992],\"y\" : [18,32,34,56,104,158,237,369,482,598,761,953,1199,1553,1834,2283],\"name\" : \"multi-threaded wall time\",\"type\" : \"line\"}],\"layout\" : {\"height\" : 400,\"title\" : \"Meataxe64 runtimes for matrix multiply\",\"xaxis\" : {\"title\" : \"Dimension\"},\"yaxis\" : {\"title\" : \"ms\"}}},\"tool\" : \"plotly\"}\n",
+       ",function(element,visualization){\n",
+       "});\n",
+       "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"viz-tool-plotly\"\n",
+       ")){myCallback()}else{var filenameString=JSON.stringify(\"viz-tool-plotly\"\n",
+       ");var GAPcode=\"JUPVIZFileContents( LoadJavaScriptFile( \"+filenameString+\" ) );\";window.runGAP(GAPcode,function(result,error){if(error)throw Error(\"When loading library \"+filenameString+\": \"+error);result=result[\"text/plain\"];window.librariesLoadedFromGAP[\"viz-tool-plotly\"\n",
+       "]=result;try{var whatItEvaluatesTo=eval(result)}catch(e){throw Error(\"Error evaluating code for library \"+filenameString+\": \"+e)}return myCallback()})}\n",
+       "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"main\"\n",
+       ")){myCallback()}else{var filenameString=JSON.stringify(\"main\"\n",
+       ");var GAPcode=\"JUPVIZFileContents( LoadJavaScriptFile( \"+filenameString+\" ) );\";window.runGAP(GAPcode,function(result,error){if(error)throw Error(\"When loading library \"+filenameString+\": \"+error);result=result[\"text/plain\"];window.librariesLoadedFromGAP[\"main\"\n",
+       "]=result;try{var whatItEvaluatesTo=eval(result)}catch(e){throw Error(\"Error evaluating code for library \"+filenameString+\": \"+e)}return myCallback()})}\n",
+       ";\n",
+       "} )( element.get( 0 ) )"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {
+      "application/javascript": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fsq := function(m) MTX64_WriteMatrix(m, \"a\"); MTX64_fMultiply(\".\", \"a\", \"a\", \"b\"); end;;\n",
     "marks1 := List(mats, x-> BenchMark(\\*,x,x));;\n",
