--- a/notebooks-master/Syntax Tree Demo.ipynb
+++ b/notebooks-master/Syntax Tree Demo.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "We show how `SyntaxTree` could be used to automatically fix this in the workspace. \n",
     "\n",
-    "`f` below is a  test function. The comment is a *pragma* -- a comment which is retained in the function object, which could be used to direct optimisation.\n",
+    "`f` below is a  test function. The second comment is a *pragma* -- a comment which is retained in the function object, which could be used to direct optimisation.\n",
     "\n",
     "Note that the pragma appears in the syntax tree, unlike the regular comment"
    ]
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "rec( args := [ rec( left := \"$1\", right := rec( type := \"EXPR_INT\", value := \"$2\" ), type := \"EXPR_QUO\" ) ], funcref := rec( gvar := \"Int\", type := \"EXPR_REF_GVAR\" ), type := \"EXPR_FUNCCALL_1ARGS\" )"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -150,7 +150,7 @@
        "rec( args := [ \"$1\", rec( type := \"EXPR_INT\", value := \"$2\" ) ], funcref := rec( gvar := \"QuoInt\", type := \"EXPR_REF_GVAR\" ), type := \"EXPR_FUNCCALL_2ARGS\" )"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
