Add table with package activities by country

--- a/notebooks/GAP_Packages.ipynb
+++ b/notebooks/GAP_Packages.ipynb
@@ -101,7 +101,39 @@
       "Warning: no country detected for Yaroslav Sysak, package localnr\n",
       "Warning: no country detected for Richard Parker, package meataxe64\n",
       "Warning: no country detected for Carmelo Cisco, package numericalsgps\n",
-      "Warning: no country detected for Stephen Howe, package recog\n"
+      "Warning: no country detected for Stephen Howe, package recog\n",
+      "--------------------------------------------------------\n",
+      "Package activities by country\n",
+      "--------------------------------------------------------\n",
+      "176 : Germany\n",
+      "103 : U.K.\n",
+      "30 : U.S.\n",
+      "21 : \n",
+      "15 : Australia\n",
+      "14 : Italy\n",
+      "12 : Spain\n",
+      "11 : Portugal\n",
+      "10 : Belgium\n",
+      "7 : India\n",
+      "6 : Netherlands\n",
+      "6 : Turkey\n",
+      "5 : Austria\n",
+      "5 : New Zealand\n",
+      "4 : Hungary\n",
+      "4 : Ireland\n",
+      "3 : Brazil\n",
+      "3 : Norway\n",
+      "2 : Argentina\n",
+      "2 : Canada\n",
+      "2 : Russia\n",
+      "2 : United Arab Emirates\n",
+      "1 : Greece\n",
+      "1 : Japan\n",
+      "1 : Romania\n",
+      "1 : Sweden\n",
+      "1 : Ukraine\n",
+      "1 : Venezuela\n",
+      "--------------------------------------------------------\n"
      ]
     }
    ],
@@ -143,6 +175,15 @@
    "source": [
     "CreateVisualization( rec( tool := \"plotly\", data := mapdata ) );"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
